=head1 NAME

Changes - List of significant changes to Devel::NYTProf

=cut

TODO: study http://www.postgresql.org/docs/9.2/static/pgtesttiming.html
and reference in our docs.

http://stackoverflow.com/questions/4132270/how-to-ignore-some-subroutine-calls-in-nytprof-reporting/14085984#14085984

=head2 Changes in Devel::NYTProf 4.24 - 3rd Feb 2013

    Clarify sigexit option docs.
    Loosen test timing constraints (for slow cpantester VMs).

=head2 Changes in Devel::NYTProf 4.23 - 31st Dec 2012

  Significant improvement in the accuracy of the subroutine profiler,
    especially for frequent calls to very short duration subs/ops,
    and more so for POSIX and OSX systems with sub-microsecond clocks.

  Fixed tests to work with perl 5.17.7+ (PL_sawampersand gone).
  Fixed some doc typos thanks to Jesse Sheidlower.
  Improved nytprofmerge behaviour with inconsistent attributes.
  Removed the usecputime=1 option. Use clock=N instead if possible.
  Moved main repo to git (and https://github.com/timbunce/devel-nytprof)

=head2 Changes in Devel::NYTProf 4.12 - 28th Dec 2012

  Fixed the perl v5.17+ fix to do-the-right-thing for 5.17.4.
  Fixed pod encoding issues.

=head2 Changes in Devel::NYTProf 4.11 (svn 1442) 26th Dec 2012

  Fixed to work with perl v5.17+, specifically string eval
    changes and hash randomization.
  Fixed so tests ignore sitecustomize.pl, RT#79784
    thanks to JACOB@cpan.org.
  Fixed to sort tables with microsecond values in non-utf8
    encodings, RT#77843

  Deprecated the usecputime=1 option and documented that it
    will be removed in a future version.

  Corrected spelling thanks to Alessandro Ghedini @debian RT#80370

=head2 Changes in Devel::NYTProf 4.09 (svn 1431) 15th Sep 2012

  Fixed to work for perl v5.17.3+ thanks to David Mitchell.

=head2 Changes in Devel::NYTProf 4.08 (svn 1427) 11th Aug 2012

  Fixed version numbers in nytprofhtml and nytprofmerge.

=head2 Changes in Devel::NYTProf 4.07 (svn 1419) 10th Aug 2012
