@@ -48,5 +48,5 @@
       ],
       "x_MailingList" : "http://groups.google.com/group/develnytprof-dev"
    },
-   "version" : "4.24"
+   "version" : "4.25"
 }
