@@ -27,4 +27,4 @@ resources:
   homepage: https://code.google.com/p/perl-devel-nytprof/
   license: http://dev.perl.org/licenses/
   x_MailingList: http://groups.google.com/group/develnytprof-dev
-version: 4.24
+version: 4.25
