@@ -9,6 +9,10 @@ and reference in our docs.
 
 http://stackoverflow.com/questions/4132270/how-to-ignore-some-subroutine-calls-in-nytprof-reporting/14085984#14085984
 
+=head2 Changes in Devel::NYTProf 4.25 - 6th Feb 2013
+
+    Fix u2time clock (ie Time::HiRes, used by Windows)
+
 =head2 Changes in Devel::NYTProf 4.24 - 3rd Feb 2013
 
     Clarify sigexit option docs.
